[gd_scene load_steps=3 format=3 uid="uid://be8qbmt0fe144"]

[ext_resource type="Script" uid="uid://cb4djnmhlvho" path="res://scripts/player.gd" id="1_3vyb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8vuu"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_3vyb7")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(20, 0)

[node name="body" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="gun" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = -4.0
offset_right = 44.0
offset_bottom = 4.0
color = Color(0, 0, 0, 1)

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2(1.9817158, 1.9817158)
shape = SubResource("RectangleShape2D_u8vuu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 44.0
offset_top = -1.0
offset_right = 608.0
offset_bottom = 1.0
color = Color(0.63888407, 2.0214916e-06, 4.813075e-07, 1)

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
